configured sanctum to authenticate apis and added login API
